chapter_istio/networking/kiali-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-httproute
  namespace: istio-system
spec:
  parentRefs:
  - name: handson-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - kiali.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kiali
      port: 20001
