chapter_istio/networking/service-entry-example-com.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-example-com
  namespace: handson
  labels:
    content: example.com
spec:
  hosts:
  - example.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: NONE
