chapter_istio/networking/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: cloudnativedays-jp
  namespace: handson
spec:
  hosts:
  - cloudnativedays.jp
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: NONE
