chapter_istio/networking/simple-routing.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: simple-routing
  namespace: handson
  labels:
    content: simple-routing
spec:
  hosts:
  - app.example.com
  gateways:
  - handson
  http:
  - route:
    - destination:
        host: handson
        port:
          number: 8080
