chapter_istio/networking/L7-authorization-policy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: layer7-authz
  namespace: handson
  labels:
    content: layer7-authz
spec:
  selector:
    matchLabels:
      app: handson
  action: DENY
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/handson/sa/curl
    to:
    - operation:
        methods:
        - POST
        - PUT
        - PATCH
        - DELETE
        ports:
        - "8080"
